[gd_scene load_steps=4 format=3 uid="uid://cyqxmwqu2cl0s"]

[ext_resource type="Script" path="res://scripts/Main Menu.gd" id="1_3wqkq"]
[ext_resource type="Theme" uid="uid://dead0m1eas4n" path="res://themes/menu_buttons.tres" id="1_go8je"]
[ext_resource type="Script" path="res://scripts/Game Development.gd" id="3_v448c"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 118.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 86
text = "Portfolio"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_top = 41.0
offset_right = 263.0
offset_bottom = 108.0
grow_vertical = 0
theme = ExtResource("1_go8je")
text = "Back"

[node name="Main Menu" type="Control" parent="." node_paths=PackedStringArray("button_container", "title_label", "game_development_control")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3wqkq")
button_container = NodePath("VBoxContainer")
title_label = NodePath("../Title")
game_development_control = NodePath("../Game Development")

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.5
offset_top = -132.0
offset_right = 194.5
offset_bottom = 222.366
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameDevelopment" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_go8je")
text = "Game Development"

[node name="Game Modding" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_go8je")
text = "Game Modding"

[node name="Artstation" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_go8je")
text = "ArtStation"

[node name="Other" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_go8je")
text = "Other"

[node name="Game Development" type="Control" parent="." node_paths=PackedStringArray("title_label", "back_button", "main_menu_control")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_v448c")
title_label = NodePath("../Title")
back_button = NodePath("../BackButton")
main_menu_control = NodePath("../Main Menu")
back_button_end_position = Vector2(70, 970)

[connection signal="pressed" from="BackButton" to="Game Development" method="_on_back_button_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/GameDevelopment" to="Main Menu" method="_on_game_development_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/Game Modding" to="Main Menu" method="_on_game_modding_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/Artstation" to="Main Menu" method="_on_artstation_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/Other" to="Main Menu" method="_on_other_pressed"]
